Revision history for DBIx-Class-Migration.

0.073   2019-03-24
        - test-fail to successfully give more info

0.072   2019-03-20
        - test-fail to give more info

0.071   2019-03-20
        - fix MooX::Attribute::ENV version dep to avoid type failures

0.070   2019-03-19
        - use 5.8-10 compatible way of schema with version-object

0.069   2019-03-19
        - Moo has no auto_deref, fix Catalyst helper

0.068   2019-03-15
        - convert to Type::Tiny
        - convert to MooX::Options
        - convert to MooX::Attribute::ENV
        - convert to Moo

0.067   2019-03-14
        - zap redundant RE bit that confuses 5.8.9
        - update DBIx::Class::Fixtures dep to 1.001039

0.066   2019-03-14
        - default migrations dir = 'share/migrations' again - thanks @KES777 for report

0.065   2019-03-07
        - POD improvements - thanks @manwar
        - handle "package NAME VERSION" - thanks @kivilahtio for report

0.064   2019-03-05
        - on "install" with -V, use right fixtures - thanks @KES777 for report

0.063   2019-02-26
        - pass on dbic_connect_attrs even if no dsn - thanks @abeverley for report
        - handle SQL keywords in identifiers - thanks @ikapelyukhin for report

0.062   2019-02-25
        - update DBIx::Class::DeploymentHandler dep to 0.002222 - thanks @KES777 for report
        - POD improvements - thanks @manwar
        - use Log::Any for errors - thanks @upasana-me
        - coerce target_dir to absolute to work right on 5.26+

0.061   2019-02-25
        - POD improvements - thanks @n7st and @willsheppard
        - make the tests work running in parallel
        - Ignore Views when running 'prepare' - thanks @mulletboy2
        - say valid possibilities if --database= invalid

0.060   2017-10-17
        - fixed VERSION mistake in previous release

0.059   2017-10-17
        - Merged in some PRs around typos
        - Merged PR to convert to Test::Postgresql58
        - Use modern versions of dependencies
        