@@ -108,8 +108,9 @@ sub default_plugins {
 sub used_plugins {
   my $path = 'DBIx/Class/Migration/RunScript/Trait/';
   my $match = "$path(.+).pm";
+  my $traits_path = $INC{'MooX/Traits/Util.pm'};
   return map { m[$match]x }
-    grep { m[$path]x } keys %INC;
+    grep { $INC{$_} ne $traits_path and m[$path]x } keys %INC;
 }
 
 sub builder(&) {
