@@ -48,4 +48,12 @@ SUGAR2: {
   $code->($migration->schema, [1,2]);
 }
 
+# second go so that %INC now contains RunScript with all traits to trigger bug
+SUGAR3: {
+  my $code = migrate {
+    $runs->(shift)
+  };
+  $code->($migration->schema, [1,2]);
+}
+
 done_testing;
